--- a/app.json
+++ b/app.json
@@ -5,13 +5,16 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "scheme": "anthroapp",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -30,7 +33,8 @@
         {
           "photosPermission": "The app accesses your photos to let you share them with your fitness progress."
         }
-      ]
+      ],
+      "expo-web-browser"
     ]
   }
 }
