--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "~53.0.20",
+    "expo-auth-session": "~6.2.1",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
