--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "anthroapp",
     "userInterfaceStyle": "light",
     "extra": {
-      "PROCESS_URL": "http://192.168.1.11:8000"
+      "PROCESS_URL": "https://62bf17a3adde.ngrok-free.app"
     },
     
     "splash": {
