--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
+    "lucide-react": "^0.539.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-paper": "^5.14.5",
