--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "~53.0.20",
-    "expo-auth-session": "~6.2.1",
-    "expo-image-picker": "~16.1.4",
-    "expo-status-bar": "~2.2.3",
-    "expo-web-browser": "~14.2.0",
+    "expo": "54.0.7",
+    "expo-auth-session": "~7.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.7",
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@10.16.1+sha256.b77e92ba0d59a6372b6c5041bbb3f866fb85e927df333827f0c7f577c5e1a713"
 }
