--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,18 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    }
+      "@/*": ["src/*"]
+    },
+    "skipLibCheck": true,
+    "noEmit": true
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx"
+    "app/**/*",
+    "src/**/*",
+    "types/**/*",
+    "index.ts",
+    "index.tsx"
   ]
 }
