--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "54.0.7",
@@ -22,7 +23,7 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
     "zod": "^4.0.17"
   },
@@ -34,5 +35,7 @@
   },
   "private": true,
   "packageManager": "pnpm@10.16.1+sha256.b77e92ba0d59a6372b6c5041bbb3f866fb85e927df333827f0c7f577c5e1a713",
-  "engines": { "node": ">=20.19.4" }
+  "engines": {
+    "node": ">=20.19.4"
+  }
 }
