fix crashing bug

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "anthroapp",
     "userInterfaceStyle": "light",
     "extra": {
-      "PROCESS_URL": "https://738a50a641ee.ngrok-free.app/",
+      "PROCESS_URL": "https://c6bd9dc0ad11.ngrok-free.app",
       "PROCESS_PATH": "/process"
     },
     
