static domain added

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "scheme": "anthroapp",
     "userInterfaceStyle": "light",
     "extra": {
-      "PROCESS_URL": "https://c6bd9dc0ad11.ngrok-free.app",
+      "PROCESS_URL": "https://isochronal-nonrevenue-evie.ngrok-free.dev",
       "PROCESS_PATH": "/process"
     },
     
