--- a/eas.json
+++ b/eas.json
@@ -1,24 +1,15 @@
 {
-  "cli": {
-    "version": ">= 3.0.0",
-    "appVersionSource": "remote"
-  },
+  "cli": { "version": ">= 16.0.0" },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "android": { "buildType": "apk" }
-    },
-    "preview": {
-      "distribution": "internal",
+    "apk": {
       "android": { "buildType": "apk" }
     },
     "production": {
-      "autoIncrement": true,
       "android": { "buildType": "app-bundle" }
+    },
+    "development": {
+      "developmentClient": true,
+      "android": { "buildType": "apk" }
     }
-  },
-  "submit": {
-    "production": {}
   }
 }
